[package]
authors = ["Brandon Kauffman <bkauffman7@liberty.edu>"]
edition = "2018"
name = "remote_exporter"
version = "0.1.0"

[dependencies]
lazy_static = "1.4.0"
ssh2 = "0.9.1"
warp = "0.2"
yaml-rust = "0.4"

[dependencies.prometheus]
features = ["process"]
version = "0.9"

[dependencies.tokio]
features = ["macros", "time"]
version = "0.2"
